--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <h2>I'm Brian Wasike, a frontend developer</h2>
            <h1 class="content">
             <ol>
-                <li><span>Web Design</span></li>
-                <li><span>Web Development</span></li>
-                <li><span>Graphic Design</span></li>
+                <li><span>Web Designer</span></li>
+                <li><span>Web Developer</span></li>
+                <li><span>Graphic Designer</span></li>
                 <li><span>UI/UX Enthusiast</span></li>
                 <li><span>Tech Lover</span></li>
             </ol>
