--- a/index.html
+++ b/index.html
@@ -3,7 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bryant-Tech</title>
+    <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <title>Brian Wasike | Frontend Developer & Graphic Designer in Kenya</title>
+  
+  <!-- Meta Description -->
+  <meta name="description" content="Brian Wasike is a frontend developer and graphic designer creating modern, responsive websites and digital designs. Based in Kenya. View my portfolio and projects." />
+  
+  <!-- Keywords -->
+  <meta name="keywords" content="Frontend Developer, Graphic Designer, Web Developer Kenya, Portfolio Website, UI/UX Designer, Brian Wasike, Responsive Web Design" />
+  
+  <!-- Author -->
+  <meta name="author" content="Brian Wasike" />
+  
+  <!-- Favicon -->
+  <link rel="icon" href="logo.png" type="image/png" />
+  
+  <!-- Open Graph Tags (Social Media Preview) -->
+  <meta property="og:title" content="Brian Wasike | Frontend Developer & Designer" />
+  <meta property="og:description" content="Creative Frontend Developer & Graphic Designer from Kenya. Explore my portfolio." />
+  <meta property="og:image" content="https://bryant-t504.github.io/website/new%20me.jpg" />
+  <meta property="og:url" content="https://bryant-t504.github.io/website/" />
+  <meta property="og:type" content="website" />
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Brian Wasike | Frontend Developer & Designer" />
+  <meta name="twitter:description" content="Creative Frontend Developer & Graphic Designer from Kenya. Explore my portfolio." />
+  <meta name="twitter:image" content="https://bryant-t504.github.io/website/new%20me.jpg" />
+
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="home.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+</head>
+
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script type="text/javascript"
